@@ -232,7 +232,7 @@ def _send_moderators_changed_email(community,
 
     msg.set_payload(body, "UTF-8")
     msg.set_type('text/html')
-    mailer.send(info['mfrom'], to_addrs, msg)
+    mailer.send(to_addrs, msg)
 
 class ManageMembersFormController(object):
     def __init__(self, context, request):
@@ -442,7 +442,7 @@ def _send_aeu_emails(community, community_href, profiles, text):
 
         msg.set_payload(body, "UTF-8")
         msg.set_type('text/html')
-        mailer.send(info['mfrom'], [to_email,], msg)
+        mailer.send([to_email,], msg)
 
 
 class AddExistingUserFormController(object):
@@ -734,7 +734,7 @@ def _send_ai_email(community, community_href, username, profile):
 
     msg.set_payload(body, "UTF-8")
     msg.set_type('text/html')
-    mailer.send(info['mfrom'], [profile.email,], msg)
+    mailer.send([profile.email,], msg)
 
 class InviteNewUsersFormController(object):
     def __init__(self, context, request):
@@ -890,7 +890,7 @@ def _send_invitation_email(request, community, community_href, invitation):
 
     msg.set_payload(body, "UTF-8")
     msg.set_type('text/html')
-    mailer.send(info['mfrom'], [invitation.email,], msg)
+    mailer.send([invitation.email,], msg)
 
 def jquery_member_search_view(context, request):
     prefix = request.params['val'].lower()
